[package]
name = "hellorust"
version = "0.1.0"
authors = ["Lexy H."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.1", features = ["serde"] }
specs = { version = "0.17.0", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
